compilateurDeca/src/test/deca/context/invalid/objet/expressions/new_int.deca
// Description:
//    Test de contexte : new sur un type primitif (int)
//
// Resultats:
//    Erreur contextuelle : Le type instancié par new doit être une classe
//
// Historique:
//    cree le 15/01/2026

{
    new int();
}
